--- a/res/color/default_text_color.xml
+++ b/res/color/default_text_color.xml
@@ -2,5 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true" android:color="@color/default_text_pressed"/>
     <item android:state_selected="true" android:color="@color/default_text_pressed"/>
+    <item android:state_enabled="false" android:color="@color/gray"/>
     <item android:color="@color/default_text_normal"></item>
 </selector>
