--- a/res/drawable/erase_width_bg.xml
+++ b/res/drawable/erase_width_bg.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <solid android:color="@color/erase_width_color"></solid>
-    <corners android:radius="4dp"/>
-
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android" >
+    <item android:state_selected="true" android:drawable="@drawable/erase_width_selected"></item>
+    <item android:drawable="@drawable/erase_width_default"></item>
+</selector>
