--- a/res/layout/footage_item.xml
+++ b/res/layout/footage_item.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="5dp"
-    android:orientation="vertical" >
+    android:padding="5dp" >
     <com.canruoxingchen.uglypic.cache.AsyncImageView android:id="@+id/footage_item_icon"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_gravity="center"
+        android:layout_centerInParent="true"
     	android:scaleType="fitCenter"/>
 
     <!-- <TextView android:id="@+id/footage_item_name"
@@ -18,4 +17,4 @@
         android:layout_marginRight="5dp"
         android:layout_marginTop="5dp"
         android:gravity="center"></TextView> -->
-</LinearLayout>
+</RelativeLayout>
