--- a/res/layout/footage_type_item.xml
+++ b/res/layout/footage_type_item.xml
@@ -7,6 +7,7 @@
     <TextView android:id="@+id/footage_type_item_name"
         android:layout_width="80dp"
         android:layout_height="40dp"
+        android:textSize="16sp"
         android:textColor="@color/default_text_color"
         android:gravity="center"></TextView>
 
