--- a/res/layout/image_erase_width_panel_item.xml
+++ b/res/layout/image_erase_width_panel_item.xml
@@ -7,7 +7,7 @@
     <TextView android:id="@+id/image_erase_width"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/erase_width_bg"
+        android:background="@color/erase_width_color"
         android:layout_centerInParent="true"></TextView>
 
 </RelativeLayout>
