--- a/res/layout/photo_editor.xml
+++ b/res/layout/photo_editor.xml
@@ -17,11 +17,12 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:textSize="16sp"
-            android:textColor="@color/default_text_color"
             android:background="@null"
+            android:layout_marginLeft="6dp"
+            android:drawableLeft="@drawable/camera_back"
             android:text="@string/photo_editor_top_bar_camera"
-			android:drawableLeft="@drawable/camera_back">
+            android:textColor="@color/default_text_color"
+            android:textSize="16sp" >
         </TextView>
 
         <!--
@@ -39,44 +40,44 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
             android:orientation="horizontal"
-            android:visibility="gone"
-            android:layout_centerVertical="true">
+            android:visibility="gone" >
 
             <ImageView
                 android:id="@+id/photo_editor_top_bar_object_modify"
                 android:layout_width="wrap_content"
                 android:layout_height="24dp"
-                android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:layout_marginRight="12dp"
+                android:layout_marginTop="10dp"
                 android:background="@null"
                 android:scaleType="fitCenter"
-                android:src="@drawable/photo_editor_modify">
+                android:src="@drawable/photo_editor_modify" >
             </ImageView>
 
             <ImageView
                 android:id="@+id/photo_editor_top_bar_object_delete"
                 android:layout_width="wrap_content"
                 android:layout_height="24dp"
-                android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:layout_marginRight="12dp"
+                android:layout_marginTop="10dp"
                 android:background="@null"
                 android:scaleType="fitCenter"
-                android:src="@drawable/photo_editor_delete">
+                android:src="@drawable/photo_editor_delete" >
             </ImageView>
 
             <ImageView
                 android:id="@+id/photo_editor_top_bar_object_eraser"
                 android:layout_width="wrap_content"
                 android:layout_height="24dp"
-                android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:layout_marginRight="12dp"
+                android:layout_marginTop="10dp"
                 android:background="@null"
                 android:scaleType="fitCenter"
-                android:src="@drawable/photo_editor_erase">
+                android:src="@drawable/photo_editor_erase" >
             </ImageView>
         </LinearLayout>
 
@@ -85,12 +86,12 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
             android:layout_marginRight="10dp"
+            android:gravity="center_vertical"
             android:text="@string/photo_editor_top_bar_finish"
             android:textColor="@color/default_text_color"
             android:textSize="14sp"
-            android:gravity="center_vertical"
-            android:layout_centerVertical="true"
             android:visibility="gone" >
         </TextView>
     </RelativeLayout>
@@ -127,8 +128,8 @@
         android:id="@+id/photo_editor_bottom_panel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/photo_editor_edit_panel"
         android:layout_alignParentBottom="true"
+        android:layout_below="@id/photo_editor_edit_panel"
         android:orientation="vertical" >
 
         <com.canruoxingchen.uglypic.view.HorizontalListView
@@ -136,18 +137,26 @@
             android:layout_width="match_parent"
             android:layout_height="40dp" >
         </com.canruoxingchen.uglypic.view.HorizontalListView>
-	
-        <View android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/white"></View>
-        
-        <com.canruoxingchen.uglypic.view.HorizontalListView
-            android:id="@+id/photo_editor_footage_list"
+
+        <View
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-        </com.canruoxingchen.uglypic.view.HorizontalListView>
+            android:layout_height="1dp"
+            android:background="@color/white" >
+        </View>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <com.canruoxingchen.uglypic.view.HorizontalListView
+                android:id="@+id/photo_editor_footage_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true" >
+            </com.canruoxingchen.uglypic.view.HorizontalListView>
+        </RelativeLayout>
     </LinearLayout>
-    
+
     <Button
         android:id="@+id/photo_editor_context_button"
         android:layout_width="45dp"
@@ -157,17 +166,17 @@
         android:layout_marginBottom="12dp"
         android:layout_marginRight="12dp"
         android:background="@drawable/default_button_bg"
-        android:textSize="12sp"
         android:text="@string/photo_editor_context_btn_share"
-        android:textColor="@color/default_text_color" >
+        android:textColor="@color/default_text_color"
+        android:textSize="12sp" >
     </Button>
 
     <FrameLayout
         android:id="@+id/photo_editor_context_menu_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/photo_editor_edit_panel"
         android:layout_alignParentBottom="true"
+        android:layout_below="@id/photo_editor_edit_panel"
         android:visibility="gone" >
     </FrameLayout>
 
