--- a/res/layout/photo_editor.xml
+++ b/res/layout/photo_editor.xml
@@ -113,7 +113,7 @@
             android:id="@+id/photo_editor_photo"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop" >
+            android:scaleType="fitCenter" >
         </uk.co.senab.photoview.PhotoView>
 
         <RelativeLayout
