--- a/res/layout/footage_item.xml
+++ b/res/layout/footage_item.xml
@@ -6,7 +6,9 @@
     <com.canruoxingchen.uglypic.cache.AsyncImageView android:id="@+id/footage_item_icon"
         android:layout_width="70dp"
         android:layout_height="70dp"
+        android:padding="5dp"
         android:layout_centerInParent="true"
+        android:background="@drawable/footage_item_bg"
     	android:scaleType="fitCenter"/>
 
     <!-- <TextView android:id="@+id/footage_item_name"
