--- a/res/layout/photo_editor.xml
+++ b/res/layout/photo_editor.xml
@@ -145,13 +145,14 @@
         </View>
 
         <RelativeLayout
+            android:id="@+id/photo_editor_footage_list_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
 
             <com.canruoxingchen.uglypic.view.HorizontalListView
                 android:id="@+id/photo_editor_footage_list"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="80dp"
                 android:layout_centerInParent="true" >
             </com.canruoxingchen.uglypic.view.HorizontalListView>
         </RelativeLayout>
