--- a/res/layout/footage_item.xml
+++ b/res/layout/footage_item.xml
@@ -5,7 +5,7 @@
     android:padding="5dp" >
     <com.canruoxingchen.uglypic.cache.AsyncImageView android:id="@+id/footage_item_icon"
         android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_height="match_parent"
         android:padding="5dp"
         android:layout_centerInParent="true"
         android:background="@drawable/footage_item_bg"
