--- a/res/layout/image_overlay_context_menu.xml
+++ b/res/layout/image_overlay_context_menu.xml
@@ -41,6 +41,7 @@
 	<View android:layout_width="match_parent"
 	    android:layout_height="1dp"
         android:layout_below="@id/image_params"
+        android:background="@color/white"
 	    android:id="@+id/splitter"></View>
     <RelativeLayout
         android:layout_width="match_parent"
