--- a/res/layout/footage_item.xml
+++ b/res/layout/footage_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:aiv="http://schemas.android.com/apk/res/com.canruoxingchen.uglypic"  
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="5dp" >
@@ -9,6 +10,8 @@
         android:padding="5dp"
         android:layout_centerInParent="true"
         android:background="@drawable/footage_item_bg"
+        aiv:maxWitdhPercent="0.4"
+        aiv:maxHeightPercent="0.3"
     	android:scaleType="fitCenter"/>
 
     <!-- <TextView android:id="@+id/footage_item_name"
