--- a/res/layout/photo_editor.xml
+++ b/res/layout/photo_editor.xml
@@ -25,16 +25,6 @@
             android:textSize="16sp" >
         </TextView>
 
-        <!--
-        <Button
-            android:id="@+id/photo_editor_top_bar_reset"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:text="@string/photo_editor_top_bar_reset" >
-        </Button>
-        -->
-
         <LinearLayout
             android:id="@+id/photo_editor_topbar_object_menu"
             android:layout_width="wrap_content"
@@ -91,7 +81,7 @@
             android:gravity="center_vertical"
             android:text="@string/photo_editor_top_bar_finish"
             android:textColor="@color/default_text_color"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:visibility="gone" >
         </TextView>
     </RelativeLayout>
@@ -153,6 +143,8 @@
 
             <com.canruoxingchen.uglypic.view.HorizontalListView
                 android:id="@+id/photo_editor_footage_list"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_centerInParent="true" >
